--- a/my-portfolio/src/pages/education/education.scss
+++ b/my-portfolio/src/pages/education/education.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap:40px;
     overflow: hidden;
 
     @include mobile {
@@ -31,8 +32,16 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 50px;
         padding: 10px;
+
+        @include tablet {
+            gap: 10px;
+        }
+
+        @include tablet {
+            gap: 20px;
+        }
 
         .item {
             padding: 10px;
